--- a/src/components/user/Login.css
+++ b/src/components/user/Login.css
@@ -1,5 +1,6 @@
+
 .body {
-    background-image: url(/public/fbimg.jpg);
+    background-image: url(https://media.istockphoto.com/id/1360927961/photo/abstract-background-with-interweaving-of-colored-lines-and-dots-network-connection-structure.jpg?s=612x612&w=0&k=20&c=UTu0m3kCMm6f1kien9TNCrFtliESKUMrAeyKkI5s56I=);
     background-size: cover;
     height: 100vh;
     margin: 0;
@@ -9,19 +10,17 @@
 }
 
 .login-container {
-    height: 250px;
-    width: 250px;
-    padding: 20px;
+    max-width: 400px;
+    padding: 45px;
     border: 1px solid #7a7979;
     border-radius: 5px;
-    background-color: rgba(255, 255, 255, 0.8);
-    margin-left: 450px;
+    background-color: rgba(255, 255, 255, 0.6);
 }
 
 .login-input {
     width: 100%;
     margin-top: 10px;
-    padding: 8px;
+    padding: 13px;
     border: 1px solid #e9e5e5;
     border-radius: 5px;
     box-sizing: border-box;
